pkg/kt/manifests/venv/templates/venv_operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtual-env-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: virtual-env-operator
  template:
    metadata:
      labels:
        name: virtual-env-operator
    spec:
      serviceAccountName: virtual-env-operator
      containers:
        - name: virtual-env-operator
          image: 10.160.22.6:8036/virtualenvironment/virtual-env-operator:v0.6.1
          command:
          - virtual-env-operator
          imagePullPolicy: IfNotPresent
