pkg/kt/manifests/venv/templates/venv_webhook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: et-virtual-environment
  labels:
    venvVersion: v0.6.1
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: et-virtual-environment
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: virtual-environment-webhook
webhooks:
  - name: webhook-server.et-virtual-environment.svc
    admissionReviewVersions: [ "v1" ]
    sideEffects: "None"
    failurePolicy: Fail
    clientConfig:
      service:
        name: webhook-server
        namespace: et-virtual-environment
        path: "/inject"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURUekNDQWplZ0F3SUJBZ0lKQU1PMXIrN1QwbjEyTUEwR0NTcUdTSWIzRFFFQkN3VUFNRDR4UERBNkJnTlYKQkFNTU0xWnBjblIxWVd3Z1JXNTJhWEp2Ym0xbGJuUWdRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnVjJWaQphRzl2YXlCRFFUQWVGdzB5TXpBMU1EZ3dNek14TURaYUZ3MHpNekExTURVd016TXhNRFphTUQ0eFBEQTZCZ05WCkJBTU1NMVpwY25SMVlXd2dSVzUyYVhKdmJtMWxiblFnUVdSdGFYTnphVzl1SUVOdmJuUnliMnhzWlhJZ1YyVmkKYUc5dmF5QkRRVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFOeXpOWmNudmNwVgo3RWRhN01Dc2Ny [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        environment-tag-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: et-virtual-environment
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      volumes:
        - name: webhook-tls-certs
          secret:
            secretName: webhook-server-tls
      containers:
        - name: server
          image: 10.160.22.6:8036/virtualenvironment/virtual-env-admission-webhook:v0.6.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
              name: webhook-api
          volumeMounts:
            - name: webhook-tls-certs
              mountPath: /run/secrets/tls
              readOnly: true
